--- a/index.html
+++ b/index.html
@@ -2,25 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./1173935.svg" />
+    <link rel="icon" type="image/svg+xml" href="/1173935.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TS-Data-Analysis</title>
-  </head>
-  <body>
+
+    <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- xlsx library (optional) -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"
       integrity="sha512-r22gChDnGvBylk90+2e/ycr3RVrDi8DIOkIGNhJlKfuyQM4tIRAI062MaV8sfjQKYVGjOBaZBOA87z+IhZE9DA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-    />
-
+  </head>
+  <body>
     <div id="root"></div>
+
+    <!-- Main entry point -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
